# terminal-channel-viewer

./: README.md  pyproject.toml
src/terminal_channel_viewer/: app.py  cli.py  styles.py
